# RustByExample

./: .gitignore  Cargo.toml
src/: main.rs
src/cutom_types/: Cargo.toml
src/cutom_types/src/: constants.rs  enums.rs  lib.rs  main.rs  structures.rs
src/hello_world/: Cargo.toml
src/hello_world/src/: debug.rs  display.rs  display_list.rs  formatting.rs  lib.rs  main.rs
src/primitives/src/: arrays_and_slices.rs  lib.rs  literals_operators.rs  main.rs  tuples.rs
src/types/src/: aliasing.rs  casting.rs  inference.rs  lib.rs  literals.rs  main.rs
src/variable_bindings/: Cargo.toml
src/variable_bindings/src/: declarations.rs  freezing.rs  lib.rs  main.rs  mutability.rs  scope_and_shadowing.rs
