[package]
name = "RustByExample"
version = "0.1.0"
authors = ["Ali Malik <mikli@amazon.com>"]
edition = "2018"

[workspace]
members = ["./src/hello_world", "./src/primitives"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hello_world = {path = "./src/hello_world"}